--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -194,4 +194,11 @@ OPTannote = {•}
   publisher = {Nature Publishing Group},
 }
 
+@article{harnad2003symbol,
+  title={Symbol grounding problem},
+  author={Harnad, Stevan},
+  year={2003},
+  publisher={Nature Publishing Group: Macmillan}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
