--- a/2019_neurips_vigil/intro.tex
+++ b/2019_neurips_vigil/intro.tex
@@ -3,7 +3,7 @@
 Integration of vision and language in deep neural network models allows the system to learn joint representations of objects, concepts, and relations.  Potentially, this approach can address Harnad's "symbol grounding problem" \cite{harnad2003symbol} and lead to visually grounded language learning.
 %In addition to multimodal learning, visual grounding of language is another opportunity that the AI community is excited about, especially in the context of Harnad's "symbol grounding problem" \cite{harnad2003symbol}. 
 
-Starting with the Visual Question Answering (VQA) dataset \cite{}, many tasks that integrate vision and language have emerged in the past several years\cite{mogadala2019trends}.  As a departure from the simpler vision tasks like classification and object detection, visual reasoning has become the core emphasis in these tasks. Visual reasoning mainly deals with the comparison of object attributes, counting and other relational questions.
+Starting with the Visual Question Answering (VQA) dataset \cite{}, a variety of tasks that integrate vision and language have emerged in the past several years\cite{mogadala2019trends}.  As a departure from the simpler vision problems like classification and object detection, visual reasoning has become the core emphasis in these tasks. Visual reasoning mainly deals with the comparison of object attributes, counting and other relational questions.
 
 In contrast to VQA, which comes with static image and question pairs, another emerging direction is Video QA \cite{}, which introduces the aspect of time.  In addition to spatial reasoning, video input provides an opportunity to work on temporal relations and reasoning.  As evident from human cognition, attention and memory are the key competencies required to solve these problems, and unsurprisingly, the AI research is rapidly growing in these areas.
 
