cleaning model section

--- a/2019_neurips_vigil/experiments.tex
+++ b/2019_neurips_vigil/experiments.tex
@@ -143,7 +143,7 @@ We see that the SAMNet's external memory plays an important role in remembering 
 
 \begin{figure}
 	\centering
-	\caption{This plot compares SAMNet and COG on their abilities to generalize from the canonical to the hard dataset. We show three different settings: 1) (baseline) trained on canonical, tested on canonical 2) trained on canonical, tested on hard, 3) trained on canonical,fine tuned on hard, tested on hard }
+	\caption{Comparison of SAMNet and COG on their abilities to generalize from the canonical to the hard dataset. We show three different settings: 1) (baseline) trained on canonical, tested on canonical 2) trained on canonical, tested on hard, 3) trained on canonical, fine tuned on hard, tested on hard. }
 	
 	\begin{tikzpicture}
 	
