SAM Cell reasoning + supporting figures

--- a/2019_neurips_vigil/model.tex
+++ b/2019_neurips_vigil/model.tex
@@ -8,8 +8,15 @@ All those modules are described below.
 
 \begin{figure}
 	\centering
-	\includegraphics[width=1\linewidth]{../img/architecture/samnet_architecture}
-	\caption{}
+	\includegraphics[width=1\linewidth]{../img/architecture/samnet_architecture3}
+	\caption{General architecture of the SAM Network}
+	\label{fig:samnetarchitecture}
+\end{figure}
+	
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{../img/architecture/samcell_reasoning}
+	\caption{Multi-step reasoning performed within the SAM Cell}
 	\label{fig:samnetarchitecture}
 \end{figure}
 	
