--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -332,3 +332,73 @@ end of the previous frame.
 	\label{fig:model}
 \end{figure}	
 
+\colorbx{Image Encoder}
+
+\colorbx{Question Encoder}
+
+\colorbx{Output Unit}
+
+
+\section{Results}
+
+
+\begin{table}[t]
+	\tiny
+	
+	\caption{COG test set accuracies for  SAMNet \& COG models. For the COG section, the results marked as 'paper' comes from the original COG paper ~\cite{yang2018dataset}, whereas the results marked as 'ours' come from our own experiments using the following implementation: https://github.com/google/cog }
+	
+	\centering
+	\begin{tabular}{ccccccccccc}
+		\toprule
+		Model & & SAMNet & && && COG&& \\
+		\cmidrule{2-5} \cmidrule{7-11} 
+		&&&&& & paper & ours & ours & paper&\\
+		\cmidrule{7-9} \cmidrule{10-11}
+		Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
+		Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
+		Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
+		\midrule
+		
+		Overall accuracy & 98.0 & 91.6 & 96.5  & running &           & 97.6  & 65.9 & running& 80.1 \\ 
+		
+		\midrule 
+		
+		
+		AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&53.1&&	51.4
+		\\ 
+		AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&57.1	&&50.7\\ 
+		AndSimpleCompareColor	&	99.2	&		85.3	&	97.6	&	&	&99.7&	53.4&&	78.2\\ 
+		AndSimpleCompareShape	&	99.2&			85.8	&	97.6	&&	&	100.0	&56.7&&	77.9\\ 
+		CompareColor	&	98.1		&	89.3	&	95.9	&&		&99.2&	56.1&&	50.1\\ 
+		CompareShape	&	98.0	&		89.7	&	95.9	&&	&99.4	&66.8	&&50.5
+		\\ 
+		Exist	&	100.0	&		99.7	&	99.8		&&	&	100.0&	63.5&&	99.3\\ 
+		ExistColor	&	100.0		&	99.6	&	99.9	&&	&	99.0&	70.9&&	89.8\\ 
+		ExistColorOf	&	99.9	&		95.5	&	99.7		& & &	99.7&	51.5&&	73.1\\ 
+		ExistColorSpace	&94.1		&	88.8	&	91.0	&& &	98.9	&72.8	&&89.2\\ 
+		ExistLastColorSameShape	&	99.5		&	99.4	&99.4	&&		&100.0	&65.0&&	50.4
+		\\ 
+		ExistLastObjectSameObject	&	97.3	&		97.5	&	97.7	&&	&	98.0&	77.5	&&60.2\\ 
+		ExistLastShapeSameColor	&	98.2		&	98.5&	98.8	&&	&	100.0&	87.8&&	50.3\\ 
+		ExistShape	&	100.0	&	99.5	&	100.0	&&&	100.0&	77.1	&&92.5\\ 
+		ExistShapeOf	&	99.4		&	95.9	&	99.2	&&&100.0	&52.7&&89.8\\ 
+		ExistSpace	&	95.3	&	89.7	&	93.2	&&		&	98.9	&71.1	&&92.8\\ 
+		GetColor	&	100.0		&	95.8&	99.9	&& &	100.0&	71.4&&	97.9\\ 
+		GetColorSpace	&	98.0		&	90.0	&	95.0&	& &	98.2	&71.8&&	92.3\\ 
+		GetShape	&	100.0		&	97.3&	99.9&	&	&	100.0  &83.5&&	97.1
+		\\ 
+		GetShapeSpace	&	97.5	&	89.4	&	93.9	&&&	98.1  &78.7	&&	90.3\\ 
+		SimpleCompareShape	&	99.9		&	91.4	&	99.7	&	&&	100.0 & 67.7&&	99.3\\ 
+		SimpleCompareColor	&	100.0 		&	91.6  &	99.80&	&	&	100.0&	64.2&&	99.3	  \\ 
+		
+		
+		
+		
+		
+		
+		
+		\bottomrule
+	\end{tabular}
+	\label{results}
+\end{table}
+
