--- a/2019_neurips_vigil/intro.tex
+++ b/2019_neurips_vigil/intro.tex
@@ -65,7 +65,7 @@ These solutions may demonstrate high accuracy, however, generalization to arbitr
 %IMPORTANT: \textbf{we do not have any explicit assumptions when it comes to number of frames/length of the movie/number of distractionts}, so there is no need for cutting video into cuts etc.
 
 \subsection{Contributions}
-This work have attempted to address the issues mentioned above and propose a new model that can dynamically process video input frame-by-frame, reason over images and remember the salient concepts to answer questions.  We have tested this model on the COG dataset \cite{yang2018dataset} and compared to the baseline results.  Our results indicate that the model is capable of:
+This work introduces a new model that can dynamically process video input frame-by-frame, reason over images and remember the salient concepts to answer questions.  Our results based on the COG dataset \cite{yang2018dataset} indicate that the model is capable of:
 %\begin{itemize}
 %\item \textbf{Time aspect}:
 \begin{itemize}
