--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -27,9 +27,11 @@
 \usepackage{amsthm}
 \usepackage{mathtools}
 %\usepackage[usenames, dvipsnames]{color}
+\usepackage{cleveref}
+\crefname{figure}{Figure}{Figures}
 
-\usepackage{enumitem}
-\setlist[enumerate]{labelindent=5pt, label=\alph*)} 
+%\usepackage{enumitem}
+%\setlist[enumerate]{labelindent=5pt, label=\alph*)} 
 
 
 % \usepackage{blindtext}
