--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -347,6 +347,7 @@ end of the previous frame.
 	
 	\caption{COG test set accuracies for  SAMNet \& COG models. For the COG section, the results marked as 'paper' comes from the original COG paper ~\cite{yang2018dataset}, whereas the results marked as 'ours' come from our own experiments using the following implementation: https://github.com/google/cog }
 	
+	\resizebox{\textwidth}{!}{
 	\centering
 	\begin{tabular}{ccccccccccc}
 		\toprule
@@ -364,9 +365,9 @@ end of the previous frame.
 		\midrule 
 		
 		
-		AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&53.1&&	51.4
+		AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&57.1&&	51.4
 		\\ 
-		AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&57.1	&&50.7\\ 
+		AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	&&50.7\\ 
 		AndSimpleCompareColor	&	99.2	&		85.3	&	97.6	&	&	&99.7&	53.4&&	78.2\\ 
 		AndSimpleCompareShape	&	99.2&			85.8	&	97.6	&&	&	100.0	&56.7&&	77.9\\ 
 		CompareColor	&	98.1		&	89.3	&	95.9	&&		&99.2&	56.1&&	50.1\\ 
@@ -399,6 +400,8 @@ end of the previous frame.
 		
 		\bottomrule
 	\end{tabular}
+}
+
 	\label{results}
 \end{table}
 
