--- a/2019_neurips_vigil/experiments.tex
+++ b/2019_neurips_vigil/experiments.tex
@@ -16,35 +16,51 @@ We argue that the generalization capability of SAMNet is mainly due to the dynam
 \begin{table}[!t]
 	\centering
 	\caption{COG Dataset parameters for the canonical setting and the hard setting  }
-	\resizebox{\textwidth}{!}{
-	
-
-	\begin{tabular}{ccccccc}
+	\begin{tabular}{ccc}
 		\toprule
+		Dataset       &    Canonical setting   & Hard setting   \\
 		
-		Dataset    &  	number of frames  &  	maximum memory duration & number of distractors & size of training set & size of validation/test set    \\ 
-          \midrule
+		\midrule
 		
-		 Canonical setting & 4 & 3 & 1 & 10000320 & 500016 &   \\
-		 \midrule
-		 
-		 Hard  setting & 8 & 7& 10 & 10000320 & 500016  \\
-		 \bottomrule
+		number of frames      &    4  &  8      \\
+		
+		\midrule
+		
+		maximum memory duration      &    3   & 7      \\
+		
+		\midrule
+		
+		number of distractors     &    1   & 10    \\
+		
+		\midrule
+		
+		size of training set    &    10000320  & 10000320      \\
+		
+		\midrule
+		
+		size of validation/test set    &    500016   & 500016      \\
+		
+		\midrule
+		
+		tasks per family  training set   &    227280  & 227280    \\
+		
+		\midrule
+		
+		tasks per family  validation/test set   &    11364   & 11364      \\
+		
+	
+	
+		
+	
+	   \bottomrule
 	
 	\end{tabular}
-}
-
 	
 	\label{tab:parameters}
 \end{table}
 
 
-<<<<<<< HEAD
 \subsection{Training and Implementation Details}
-=======
-
-\subsection{Training and testing Methodology}
->>>>>>> f2f4bdec46590da56efa04bb9c25eb405c8c3882
 
 SAMNet is implmented on IBM's Mi-Prometheus~\cite{kornuta2018accelerating} framework based on Pytorch. 
 We trained all our models using NVIDIA’s GeForce GTX TITAN X GPUs. SAMNet was trained using 8 reasoning steps and a hidden state size of 128. The external memory has 128-bit slots for all experiments. We trained our model until convergence but we also have set a training time limit of 80 hours.
@@ -70,11 +86,11 @@ The large improvement in these memory-intensive tasks indicate that the SAMNet's
 
 
 \begin{table}[t]
+	\tiny
 	
 	\caption{COG test set accuracies for  SAMNet \& COG models. For the COG section, the results marked as 'paper' comes from the original COG paper ~\cite{yang2018dataset}, whereas the results marked as 'ours' come from our own experiments using the following implementation: https://github.com/google/cog }
 	
 	\centering
-	\resizebox{\textwidth}{!}{
 	\begin{tabular}{ccccccccccc}
 		\toprule
 		Model & & SAMNet & && && COG&& \\
@@ -86,14 +102,14 @@ The large improvement in these memory-intensive tasks indicate that the SAMNet's
 		Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
 		\midrule
 		
-		Overall accuracy & 98.0 & 91.6 & 96.5  &  &           & 97.6  & 65.9 & & 80.1 \\ 
+		Overall accuracy & 98.0 & 91.6 & 96.5  & running &           & 97.6  & 65.9 & running& 80.1 \\ 
 		
 		\midrule 
 		
 		
-		AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&57.1&  &	51.4
+		AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&53.1&&	51.4
 \\ 
-		AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	& &50.7\\ 
+		AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&57.1	&&50.7\\ 
 
 		
 		
@@ -104,7 +120,6 @@ The large improvement in these memory-intensive tasks indicate that the SAMNet's
 		
 		\bottomrule
 	\end{tabular}
-}
 	\label{results}
 \end{table}
 
